# Aline

./: README.md
backend/: .gitignore  AIMaxiFAI.spec  README.md  __init__.py  app.py  config.yaml  env.example  pyproject.toml  test_camera.py
backend/core/: config.py  exceptions.py  monitor.py
backend/deployment/: Dockerfile  docker-compose.yml
backend/endpoints/: analysis.py  config.py  health.py  video.py  webrtc.py
backend/engine/: __init__.py  audio_processing.py  camera_calibration.py  dual_camera_manager.py  dual_view_analyzer.py  main.py  segmenter.py  stream_processor.py  velocity_calculator.py  video_processor.py  voice_message_player.py  webcam_manager.py
backend/engine/core/: __init__.py  pose_estimation.py  side_detection.py  utils.py  visualization.py
backend/engine/exercises/: __init__.py  bench_press.py  bent_over_row.py  deadlift.py  dips.py  dual_camera_mixin.py  exercise_manager.py  glute_bridge.py  lunges.py  overhead_press.py  plank.py  pullup.py  pushup.py  squat.py  wall_sit.py
backend/models/: requests.py  responses.py
backend/routers/: stream.py  video.py
backend/services/: analysis_service.py  video_service.py
backend/streaming/: __init__.py  latest_frame_bus.py
backend/tests/: final_validation_test.py  test_api.py  test_squat_rom.py
backend/utils/: batch_process.py  download_model.py
backend/webrtc/: __init__.py  video_track.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: backendService.cjs  build.cjs  config.cjs  logger.cjs  main.cjs  preload.cjs
frontend/public/: splash.html
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AnalysisResults.tsx  Home.tsx  LiveAnalysis.tsx  UploadVideo.tsx
frontend/src/utils/: api.ts
